dapp/public/stylesheets/styles-random.css
body {
    background: #dfd8c0;
    font-family: "Outfit", sans-serif;
    font-weight: lighter;
    font-size: medium;
    background-image: url("../images/background-gradient.png"), url("../images/random-shape-left.png"), url("../images/random-shape-right.png");
    background-position: left top, left center, right top;
    background-repeat: no-repeat;
    background-size: cover, 5%, 5%;
    color: #eab426;
}

h1.header {
    color: #495055;
}

h1.headerdark-mode {
    color: #e69026
}

body.dark-mode {
    background: black;
    background-image: url("../images/background-gradient-dark-mode.png"), url("../images/random-shape-left-dark-mode.png"), url("../images/random-shape-right-dark-mode.png");
    background-position: left top, left center, right top;
    background-repeat: no-repeat;
    background-size: cover, 5%, 5%;
    color: #e69026;
}

body.no-background-images, .modal-body, .modal-header {
    background: rgb(236,215,47);
    font-family: "Outfit", sans-serif;
    font-weight: 100;
    font-size: xx-small;
}

body.no-background-images.dark-mode, .modal-body.dark-mode, .modal-header.dark-mode {
    background: rgb(55,64,74);
    font-family: "Outfit", sans-serif;
    font-weight: 100;
    font-size: xx-small;
}

.message-box {
    background: rgb(55,64,74);
    font-family: "Outfit", sans-serif;
    font-weight: 100;
    /*font-size: xx-small;*/
    color: rgb(251,246,213);
    border-top-right-radius: var(--bs-modal-border-radius);
    border-top-left-radius: var(--bs-modal-border-radius);
    --bs-backdrop-opacity: 0;
}

.message-boxdark-mode {
    background: inherit;
    font-family: "Outfit", sans-serif;
    font-weight: 100;
    color: rgb(75,174,167);
    border-top-right-radius: var(--bs-modal-border-radius);
    border-top-left-radius: var(--bs-modal-border-radius);
    --bs-backdrop-opacity: 0;
}

.message-box-header {
    /* want the header row of message box modal to be transparent */
    background: transparent;
}

.modal-footer {
    /* want the button row of modal to be transparent */
    background: transparent;
}

.modal-body {
    /* making sure the modal has a nice rounded bottom */
    border-bottom-right-radius: var(--bs-modal-border-radius);
    border-bottom-left-radius: var(--bs-modal-border-radius);
}

.modal {
    /* make sure the modal itself has transparent background */
    --bs-modal-bg: transparent;
}

.modal-content, .modal-body, .modal-header, .modal-footer {
    /* remove all dividing borders between the different parts of the modal */
    border: none;
}

.modal-dialog, .modal-content {
    max-width: fit-content;
}

.light {
    font-weight: 100; /*light weight*/
}

#medium {
    font-weight: 500;
}

textarea.textfield {
    background-color: rgb(240,231,163);
    font-weight: 500;
    border-style: none;
}

textarea.dark-mode {
    background-color: rgb(185,208,201);
    font-weight: 500;
    border-style: none;
}

input.textfield {
    background-color: rgb(240,231,163);
    font-weight: 500;
    border-style: none;
}

input.textfield.dark-mode {
    background-color: rgb(185,208,201);
    font-weight: 500;
    border-style: none;
}

input.textfield:focus {
    background-color: rgb(240,231,163);
}

input.textfield.dark-mode:focus {
    background-color: rgb(185,208,201);
}

.input-group-text {
    background-color: rgb(240,231,163);
    border-style: none;
}

.input-group-textdark-mode {
    background-color: rgb(185,208,201);
    color: rgb(55,64,74);
    border-style: none;
    vertical-align: middle;
}

input.searchfield {
    background-color: rgb(240,231,163);
    font-weight: 500;
    border-style: none;
}

input.searchfielddark-mode {
    background-color: rgb(185,208,201);
    color: rgb(55,64,74);
    font-weight: 500;
    border-style: none;
}

input.searchfield:focus {
    background-color: rgb(240,231,163);
}

input.searchfielddark-mode:focus {
    background-color: rgb(185,208,201);
    color: rgb(55,64,74);
}

h1 {
    font-family: "Poiret One", sans-serif;
}

div.nft-list {
    font-family: "Outfit", sans-serif;
    font-size: medium;
    font-weight: lighter;
    text-align: center;
}

.not-selected {
    border: transparent inherit;
    border-left-style: none;
    border-top-style: none;
    background-color: transparent;
    background: transparent;
    transition-delay:  100ms;
}

.not-selecteddark-mode {
    border: transparent inherit;
    border-left-style: none;
    border-top-style: none;
    background-color: transparent;
    background: transparent;
    transition-delay:  100ms;
}

.selected {
    border: transparent rgb(250,125,35);
    border-left-style: none;
    border-top-style: none;
    background-color: linear-gradient(to bottom right, rgb(236,215,47), rgb(250,125,35));
    background: linear-gradient(to bottom right, rgb(236,215,47), rgb(250,125,35));
    transition-delay:  100ms;
}

.selecteddark-mode {
    border: transparent rgb(52,58,65);
    border-left-style: none;
    border-top-style: none;
    background-color: linear-gradient(to bottom right, rgb(52,58,65), rgb(185,208,201));
    background: linear-gradient(to bottom right, rgb(52,58,65), rgb(185,208,201));
    transition-delay:  100ms;
    color: rgb(52,58,65);
}

button.themed-color {
    background: linear-gradient(to bottom right, #f0bf4c, #eac92c);
    color: #353f47;
}

button.themed-colordark-mode {
    background: linear-gradient(to bottom right, #efb564, #e69026);
    color: #333e48;
}

.button-color {
    color: rgb(250,125,35);
}

.button-colordark-mode {
    color: rgb(75,174,167);
}

button.select-contract {
    background-color: rgb(250,125,35);
    color: rgb(255,240,134);
    border-style: none;
    padding: 10px;
}

button.select-contractdark-mode {
    background-color: rgb(75,174,167);
    color: rgb(55,64,74);
    border-style: none;
    padding: 10px;
}

button.connect-wallet {
    background: linear-gradient(to bottom right, #f0bf4c, #eac92c);
    color: #353f47;
    border-style: none;
    padding: 10px;
    margin-top: 15px;
    margin-right: 15px;
}

button.get-nfts {
    border-style: none;
    padding: 10px;
    margin-top: 15px;
    margin-right: 15px;
}

.random-actions {
    border-style: none;
    padding: 10px;
}

button.connect-wallet.dark-mode {
    background: linear-gradient(to bottom right, #efb564, #e69026);
    color: #333e48;
    border-style: none;
    padding: 10px;
    margin-top: 15px;
    margin-right: 15px;
}

button.connect-wallet:hover, button.themed-color:hover, button.select-contract:hover, button.select-contract.show {
    color: #353f47;
    background: linear-gradient(to bottom right, #f0bf4c, #eac92c);
}

button.connect-wallet.dark-mode:hover, button.themed-colordark-mode:hover, button.select-contractdark-mode:hover, button.select-contractdark-mode.show {
    background: linear-gradient(to bottom right, #efb564, #e69026); 
    color: #333e48;
}

ul.dropdown-menu.show {
    background: linear-gradient(to bottom right, #f0bf4c, #eac92c);
    color: #353f47;
}

ul.dropdown-menu.dark-mode.show {
    background: linear-gradient(to bottom right, #efb564, #e69026);
    color: #333e48;
}

.dropdown-item {
    color: #353f47;
}

.dropdown-item.dark-mode {
    color: #333e48;
}

.dropdown-item:hover {
    background-color: #ffdb71;
    color: #353f47;
}

.dropdown-item.dark-mode:hover {
    background-color: #f6cb91;
    color: #333e48;
}

.dropdown-menu {
    --bs-dropdown-bg: linear-gradient(to bottom right, #f0bf4c, #eac92c);
    --bs-dropdown-color: #353f47;
}

.dropdown-menu.dark-mode {
    --bs-dropdown-color: #333e48;
    --bs-dropdown-bg: linear-gradient(to bottom right, #efb564, #e69026);
}

.modal-title {
    font-weight: bold;
    font-size: larger;
}

.padding {
    padding: 10px;
}

a.link-row {
    color: #353f47;
    background-color: #f0bf4c;
    text-decoration: none;
    text-align: center;
}

a.link-rowdark-mode {
    background-color: #e69026;
    color: rgb(52,58,65);
    text-decoration: none;
    text-align: center;
}

div.link-row {
    color: #353f47;
    background-color: #f0bf4c;
    margin-bottom: 20px;
}

div.link-rowdark-mode {
    background-color: #e69026;
    color: #42403d;
    margin-bottom: 20px;
}

a {
    color: inherit
}
a:hover {
    color: inherit
}

a.link-row:hover {
    color: #353f47;
    background-color: #ffdb71;
    text-decoration: none;
}

a.link-rowdark-mode:hover {
    background-color: #f6cb91;
    color: #3a3c3e;
    text-decoration: none;
}

button.btn.connect-wallet.dropdown-toggle.show {
    color: #353f47;
}

button.btn.connect-wallet.dark-mode.dropdown-toggle.show {
    background-color: rgb(75,174,167);
    color: rgb(55,64,74);
}

button {
    margin-left: 8px;
}

.pagination {
    --bs-pagination-color: rgb(255,240,134);
    --bs-pagination-bg: rgb(250,125,35);
    --bs-pagination-disabled-bg: transparent;
    --bs-pagination-border-color: rgb(250,125,35);
    --bs-pagination-hover-bg: rgb(255,240,134);
    --bs-pagination-hover-color:rgb(250,125,35);
    --bs-pagination-hover-border-color:rgb(255,240,134);
    --bs-pagination-disabled-border-color: rgb(103,99,50);
    --bs-pagination-disabled-color:rgb(103,99,50);
    --bs-pagination-active-color: rgb(250,125,35);
    --bs-pagination-active-bg: rgb(255,240,134);
    --bs-pagination-active-border-color:rgb(255,240,134);
    --bs-pagination-focus-color: rgb(255,240,134);
    --bs-pagination-focus-bg: rgb(250,125,35);
}

.pagination.dark-mode {
    --bs-pagination-color: rgb(55,64,74);
    --bs-pagination-bg: rgb(75,174,167);
    --bs-pagination-disabled-bg: transparent;
    --bs-pagination-border-color: rgb(75,174,167);
    --bs-pagination-hover-bg: rgb(185,208,201);
    --bs-pagination-hover-color:rgb(55,64,74);
    --bs-pagination-hover-border-color:rgb(185,208,201);
    --bs-pagination-disabled-border-color: rgb(68,135,135);
    --bs-pagination-disabled-color:rgb(68,135,135);
    --bs-pagination-active-color: rgb(55,64,74);
    --bs-pagination-active-bg: rgb(185,208,201);
    --bs-pagination-active-border-color:rgb(185,208,201);
    --bs-pagination-focus-color: rgb(55,64,74);
    --bs-pagination-focus-bg: rgb(75,174,167);
}

.nft-name-display {
    width: 210px;
    text-align: center;
}

.name-and-logo {
    margin-top: 15px;
    margin-left: 15px;
}

.show-hover-pointer {
    cursor: pointer;
}

span.spinner-border {
    margin-left: 5px;
    width:15px !important; 
    height:15px !important;
}

a.connect-button {
    background-color: inherit;
    color: inherit;
    text-decoration: none;
}

a.connect-buttondark-mode {
    background-color: inherit;
    color: inherit;
    text-decoration: none;
}

.about-section {
    text-align: left; 
    margin-left: 15%;
    margin-right: 15%;
    margin-bottom: 0.5cm;
}

.material-symbols-outlined {
    font-size: 48px;
}

